@@ -337,6 +337,7 @@ namespace MonoDevelop.Ide.Gui
 				editorExtension.Dispose ();
 				editorExtension = editorExtension.Next as TextEditorExtension;
 			}
+			
 		}
 #region document tasks
 		List<Task> tasks = new List<Task> ();
@@ -386,8 +387,6 @@ namespace MonoDevelop.Ide.Gui
 			if (editor == null)
 				return;
 			editor.TextChanged += delegate {
-				System.Console.WriteLine("pt:" + Project.ProjectType);
-				
 				MonoDevelop.Projects.Dom.Parser.ProjectDomService.Refresh (Project, 
 				                                                           FileName, 
 				                                                           MonoDevelop.Core.Gui.Services.PlatformService.GetMimeTypeForUri (FileName),
