@@ -1,5 +1,10 @@
 2008-05-27  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed dispose source
+	  editor widget bug.
+
+2008-05-27  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added new dom & new
 	  class browser.
 
